--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -20,8 +20,8 @@
     column-gap: 4px;
 }
 
-.searchPanel > input{
+/* .searchPanel > input{
     min-height: 30px;
     min-width: 20%;
     background-color: white;
-}
+} */
