--- a/styles/MusicPlayer.module.css
+++ b/styles/MusicPlayer.module.css
@@ -4,6 +4,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    background-color: orangered;
 }
 .musicData{
     flex-direction: column;
