--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,10 +134,11 @@ social posts
   music List 
 */
 .musicListContainer{
-  padding-top: 70px;
-  padding-bottom: 80px;
+  /* padding-top: 70px;
+  padding-bottom: 80px; */
   display: flex;
   flex-wrap: wrap;
   row-gap: 40px;
   column-gap: 90px;
+  justify-content: center;
 }
